[Blimp Engine] BlimpImageSerializationProcessor handles kOpaque_SkAlphaType and kUnpremul_SkAlphaType

Te bug is caused by kOpaque_SkAlphaType. But handling kUnpremul_SkAlphaType is different.

BUG=600872

Review URL: https://codereview.chromium.org/1868053002

Cr-Commit-Position: refs/heads/master@{#386153}

Former-commit-id: 7ca1a912c969748f924b10d68147cf7f69ce625b